added post and category api
